# multi-model-rag

./: .dockerignore  .env.compose.dev.example  .env.compose.example  .env.compose.local-supabase.example  .env.example  .env.host.local-supabase.example  .env.production.app.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py  errors.py  idempotency.py
app/core/: config.py  container.py  logging.py  middleware.py  runtime.py  telemetry.py
app/domain/: __init__.py  errors.py
app/evaluation/: datasets.py  metrics.py  (+1 more)
docs/: BACKEND_GO_CHECKLIST.md  BACKEND_PRODUCTION_READINESS_RUNTIME_REPORT.md
infra/: CONTAINER_PLATFORM.md
scripts/: __init__.py  audit_pdf_representation.py  bootstrap_compose_dev_remote.ps1  bootstrap_compose_dev_remote.sh  bootstrap_compose_remote.ps1  bootstrap_compose_remote.sh  bootstrap_local_stack.ps1  bootstrap_local_stack.sh  bootstrap_local_supabase_stack.ps1  bootstrap_local_supabase_stack.sh  bootstrap_supabase_storage.py  compare_pdf_eval_runs.py  debug_ingestion_output.py  export_container_requirements.py  export_usage_report.py  generate_local_env.py  generate_local_supabase_env.py  healthcheck_api.py  healthcheck_worker.py  requeue_dead_letter_job.py  run_dev_worker.py  run_docker_compose.py  run_evaluation.py  run_local_load_probe.py  run_pdf_eval.py  run_supabase_cli.py  runtime_env.py  trace_rag_pipeline.py  validate_runtime_env.py  verify_runtime_bootstrap.py  wait_for_http.py
supabase/: config.toml  seed.sql
tests/: conftest.py
(+218 files in other folders)
