[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-model-rag"
version = "0.1.0"
description = "Enterprise-ready multi-model retrieval augmented generation platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.55.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",
    "pypdf>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "pyjwt[crypto]>=2.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
